# emo-platform-api-python

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
assets/: sample_motion.json
docs/: .buildinfo  emo_platform.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-src/: conf.py  emo_platform.rst  index.rst  modules.rst
docs/.doctrees/: emo_platform.doctree  environment.pickle  index.doctree  modules.doctree
docs/_sources/: emo_platform.rst.txt  modules.rst.txt
docs/_static/css/: custom_theme.css
emo_platform/: __init__.py  api.py  api_async.py  cli.py  exceptions.py  models.py  response.py
emo_platform/tokens/: emo-platform-api.json
examples/: async_exceptions.py  async_print_info.py  async_print_room_info.py  async_send_data_to_room.py  async_webhook_reciever.py  async_webhook_setting.py  exceptions.py  for_biz.py  for_biz_room.py  print_info.py  print_room_info.py  send_data_to_room.py  webhook_receiver.py  webhook_reciever.py  webhook_setting.py
examples/async_version/: async_exceptions.py  async_for_biz.py  async_for_biz_room.py  async_print_info.py  async_print_room_info.py  async_send_data_to_room.py  async_webhook_receiver.py  async_webhook_reciever.py  async_webhook_setting.py
test/: test_api.py
tests/: test_api.py  test_api_async.py  test_async_mock.py
