[tool.poetry]
name = "emo_platform_sdk"
version = "0.1.0"
description = ""
authors = ["Keita Ito <kito@ux-xu.com>"]
packages = [
    { include = "emo_platform" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"