[tool.poetry]
name = "emo_platform_sdk"
version = "1.0.0"
description = ""
authors = ["Keita Ito <kito@ux-xu.com>"]
packages = [
    { include = "emo_platform" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
responses = "^0.14.0"
mypy = "^0.910"
types-requests = "^2.25.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"