[tool.poetry]
name = "emo-platform-api_sdk"
version = "0.1.0"
description = "emo platform api python sdk"
authors = ["Keita Ito <kito@ux-xu.com>"]
packages = [
    { include = "emo_platform" },
]
license = "MIT"
homepage = "https://yukai.github.io/emo-platform-api-python/"
repository = "https://github.com/YUKAI/emo-platform-api-python"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
responses = "^0.14.0"
mypy = "^0.910"
types-requests = "^2.25.9"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"